--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "css-loader": "^3.4.2",
     "file-loader": "^6.0.0",
     "gh-pages": "^2.1.1",
-    "html-loader": "^1.0.0-alpha.0",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.0.0-beta.11",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss": "^7.0.25",
